# tsam

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .release-please-config.json  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  benchmark_tuning.py  codecov.yml  environment.yml  environment_base.yml  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  requirements.yml  requirements_dev.txt  requirements_dev.yml  setup.py
.github/: dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark_mamba_run.yml  ci-develop.yaml  ci-master.yaml  ci.yaml  coverage.yaml  daily_tests.yml  pr-title.yaml  pre-commit-autofix.yaml  publish.yaml  publish.yml  push_to_jugit.yml  pytest.yml  release.yaml  test_formatting.yml  test_highspy_versions.yml  test_networkx_versions.yml  test_numpy_versions.yml  test_on_push copy.yml  test_on_push.yml  test_on_push_and_pull.yml  test_pandas_versions.yml  test_pull_dev.yml  test_pull_develop.yml  test_pull_request_master_min_max_versions.yml  test_pull_request_master_python_versions.yml  test_pull_request_renovate_max_versions.yml  test_pyomo_versions.yml  test_python_versions.yml  test_scikit_learn_versions.yml  test_tdqm_versions.yml  test_tqdm_versions.yml
benchmarks/: bench.py  benchmark_tuning.py
docs/: Makefile  changelog.md  further-reading.md  gen_ref_pages.py  getting-started.md  glossary.md  index.md  installation.md  integrated-software.md  legal-notice.md  make.bat  migration-guide.md
docs/api/: SUMMARY.md  configuration.md  index.md  legacy.md  pipeline.md  results.md  tuning.md  utilities.md
docs/api/tsam/: api.md  config.md  exceptions.md  hyperparametertuning.md  periodAggregation.md  plot.md  representations.md  result.md  timeseriesaggregation.md  tuning.md
docs/background/: index.md  math.md  pipeline_dataflow.md  pipeline_guide.md
docs/background/architecture/: components.md  (+4 more)
docs/javascripts/: diagram-zoom-init.js  mathjax.js  notebook-download.js  notebook-prompts.js
docs/notebooks/: building_energy_system.ipynb  clustering.json  clustering_methods.ipynb  clustering_transfer.ipynb  disaggregation.ipynb  extreme_periods.ipynb  k_maxoids.ipynb  optimization_input.ipynb  optimization_workflow.ipynb  pareto_optimization.ipynb  quickstart.ipynb  representations.ipynb  representations_methods.ipynb  segmentation.ipynb  sizing_tuning.ipynb  tuning.ipynb  visualization.ipynb
docs/scripts/: check_api_reference.py
docs/source/: aboutUsDoc.rst  api_redesign_proposal.md  clusteringDeterminismDoc.rst  conf.py  durationRepresentationDoc.rst  exactKmedoidsDoc.rst  examples.rst  furtherReadingDoc.rst  gettingStartedDoc.rst  glossary.md  hypertunedaggregationDoc.rst  index.rst  installationDoc.rst  integratedSoftwareDoc.rst  kmaxoidsDoc.rst  legalNoticeDoc.rst  mathematicalBackgroundDoc.rst  migrationGuideDoc.rst  newsDoc.rst  periodAggregationDoc.rst  pipeline_dataflow.md  pipeline_guide.md  representationsDoc.rst  segmentationDoc.rst  structureOfTsamDoc.rst  timeseriesaggregationDoc.rst  tutorialDoc.rst  usersGuideDoc.rst
docs/stylesheets/: extra.css
docs/user-guide/: index.md
example/: aggregation_example.ipynb
examples/: Agglomerative Clustering.ipynb  Keeping Sequence Example.ipynb  aggregation_duration_representation.ipynb  aggregation_example.ipynb  aggregation_method_showcase.ipynb  aggregation_optiinput.ipynb  aggregation_representation.ipynb  aggregation_segment_period_animation.ipynb  aggregation_segment_period_building_timeseries.ipynb  aggregation_segment_period_opti.ipynb  aggregation_segmentation.ipynb  example_k_maxoids.ipynb  get_clustercenter_indices.py  predefined_sequence_example.ipynb
examples/.ipynb_checkpoints/: aggregation_example-checkpoint.ipynb
examples/Review Paper Illustrations/: Speed Test.ipynb  timeSeries_TSA.csv
examples/results/: paretoOptimalAggregation.csv  preprocessed_wind.csv  testperiods_hierarchical.csv  testperiods_kmeans.csv  testperiods_kmedoids.csv  testperiods_predefClusterOrder.csv  testperiods_predefClusterOrderAndClusterCenters.csv  testperiods_segmentation.csv
scripts/: check_api_reference.py  execute_notebooks.py  gen_component_diagram.py  sync_environment.py
src/tsam/: __init__.py  api.py  clustering_result.py  commons.py  config.py  exceptions.py  hyperparametertuning.py  options.py  periodAggregation.py  period_aggregation.py  plot.py  plotting.py  representations.py  result.py  timeseriesaggregation.py  tuning.py  weights.py
test/: _configs.py  _golden_cases.py  _old_new_equivalence.py  conftest.py  generate_golden.py  same_cluster_as_input_data.py  test_accuracyIndicators.py  test_adjacent_periods.py  test_aggregate_hiearchical.py  test_api_equivalence.py  test_assert_raises.py  test_averaging.py  test_backward_compat.py  test_benchmarks.py  test_cluster_order.py  test_clustering_e2e.py  test_column_order_warning.py  test_disaggregate.py  test_durationCurve.py  test_durationRepresentation.py  test_extremePeriods.py  test_get_optimal_segment_period_pair.py  test_golden_regression.py  test_hierarchical.py  test_hypertuneAggregation.py  test_indexMatching.py  test_k_maxoids.py  test_k_medoids.py  test_k_medoids_contiguity.py  test_minmaxRepresentation.py  test_new_api.py  test_old_new_equivalence.py  test_plot.py  test_preprocess.py  test_properties.py  test_reconstruct_samemean_segmentation.py  test_samemean.py  test_segmentation.py  test_segmentation_weight_bug.py  test_subhourlyResolution.py  (+4 more)
test/data/: opsd_germany_2019.csv  preprocessed_wind.csv  testData_durationRepresentation_hierarchical.csv  testperiods_hierarchical.csv  testperiods_kmedoids.csv  testperiods_predefClusterOrderAndClusterCenters.csv  testperiods_segmentation.csv  wide.csv
tsam/: __init__.py  hyperparametertuning.py  periodAggregation.py  representations.py  timeseriesaggregation.py
tsam/utils/: durationRepresentation.py  duration_representation.py  k_maxoids.py  k_medoids_contiguity.py  k_medoids_exact.py  segmentation.py
(+206 files in other folders)
