[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "tsam"
dynamic = ["version"]
description = "Time series aggregation module (tsam) to create typical periods"
authors = [
  { name = "Leander Kotzur", email = "leander.kotzur@googlemail.com" },
  { name = "Maximilian Hoffmann", email = "maximilian.hoffmann@julumni.fz-juelich.de" },
  { name = "Felix Buumann" , email = "felixvumann387@gmail.com"},
  { name = "Julian Belina", email = "j.belina@fz-juelich.de" },
  { name = "Olalekan Omoyele", email = "o.omoyele@fz-juelich.de" },
]

maintainers = [{ name = "Julian Belina", email = "j.belina@fz-juelich.de" }]
license = { file = "LICENSE.txt" }
keywords = ["clustering", "optimization"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "scikit-learn>=1.3.0,<=1.8.0",
  "pandas>=2.2.0,<=3.0.2",
  "numpy>=1.22.4,<=2.4.4",
  "pyomo>=6.4.8,<=6.10.0",
  "networkx>=2.5,<=3.6.1",
  "tqdm>=4.21.0,<=4.67.3",
  "highspy>=1.7.2,<=1.14.0",
]

requires-python = ">=3.10,<3.15"

[project.optional-dependencies]
develop = [
  "pytest<=9.0.3",
  "pytest-cov<=7.1.0",
  "pytest-xdist<=3.8.0",
  "pytest-benchmark<=5.2.3",
  "codecov<=2.1.13",
  "mkdocs>=1.6,<=1.6.1",
  "mkdocs-material>=9.5,<=9.7.6",
  "mkdocstrings[python]>=0.27,<=1.0.3",
  "mkdocs-jupyter>=0.25,<=0.26.1",         # 0.26.0 has packaging bug (mkdocs-jupyter#269)
  "mkdocs-gen-files>=0.5,<=0.6.1",
  "mkdocs-literate-nav>=0.6,<=0.6.3",
  "nbval<=0.11.0",
  "ruff<=0.15.9",
  "mypy<=1.20.0",
  "pandas-stubs<=3.0.0.260204",
  "pre-commit<=4.5.1",
  "plotly>=5.0.0,<=6.7.0",
  "notebook>=7.5.0,<=7.5.5",
]
plot = ["plotly>=5.0.0"]
notebooks = ["notebook>=7.5.0", "plotly>=5.0.0"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/tsam/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tsam"]


#Configureation options
# https://docs.pytest.org/en/7.1.x/reference/reference.html#configuration-options

[tool.pytest.ini_options]
testpaths = ["test"] # Sets the path where to look for tests
pythonpath = [
  "test",
] # Sets the path which should be prepended to pythonpath relative to the root folder
console_output_style = "count"
filterwarnings = ["ignore::tsam.exceptions.LegacyAPIWarning"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "test"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # Ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "E402",   # module level import not at top (needed for numpy deprecation fixes)
  "E741",   # ambiguous variable name (common in scientific code, e.g., I, l, O)
  "B007",   # loop control variable not used (common pattern in this codebase)
  "B008",   # do not perform function calls in argument defaults
  "B028",   # no explicit stacklevel in warnings (minor best practice)
  "B905",   # zip without explicit strict parameter
  "C416",   # unnecessary list/dict comprehension (sometimes clearer)
  "SIM101", # multiple isinstance calls (sometimes clearer separate)
  "SIM102", # nested if statements (sometimes clearer separate)
  "SIM108", # use ternary operator instead of if-else
  "SIM201", # use != instead of not == (sometimes clearer)
  "RUF012", # mutable class attributes - these are constants in this codebase
  "RUF002", # ambiguous unicode characters in docstrings
  "RUF059", # Unpacked variable is never used
]

[tool.ruff.lint.isort]
known-first-party = ["tsam"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["B", "SIM", "F841", "E402", "C416"] # Relax rules for tests
"src/tsam/result.py" = [
  "TCH002",
] # pandas/numpy needed at runtime for dataclass fields

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["docs/", "build/"]

[[tool.mypy.overrides]]
module = "tsam.*"
ignore_missing_imports = true
